<resources>
    <string name="app_name">Eventer</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="action_sign_in">Sign in</string>
    <string name="action_sign_up">Sign up</string>
    <string name="full_name">Full name</string>
    <string name="retype_password">Retype password</string>

    <string name="chats">Chats</string>
    <string name="edit_profile">Edit profile</string>
    <string name="change_profile">Change profile image</string>
...
